objects/LLC_BI__Spread_Statement_Period_Total__c.object
<CustomObject>
    <fields>
        <fullName>LLC_BI__Spread_Statement_Period__c</fullName>
        <description>This field is required. It is populated automatically whenever a value is calculated for a spread statement record total (group total) within the spreading applicaton. This field specifies the Spread Statement Period associated with the Spread Statement Period Total.</description>
        <label>Spread Statement Period</label>
        <referenceTo>LLC_BI__Spread_Statement_Period__c</referenceTo>
        <relationshipLabel>Spread Statement Period Totals</relationshipLabel>
        <relationshipName>Spread_Statement_Period_Totals</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Spread_Statement_Record_Total__c</fullName>
        <description>This field is required. It is populated automatically whenever a value is calculated for a spread statement record total (group total) within the spreading applicaton. This field specifies the Spread Statement Record Total associated with the Spread Statement Period Total.</description>
        <label>Spread Statement Record Total</label>
        <referenceTo>LLC_BI__Spread_Statement_Record_Total__c</referenceTo>
        <relationshipLabel>Spread Statement Period Totals</relationshipLabel>
        <relationshipName>Spread_Statement_Period_Totals</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Value__c</fullName>
        <description>This value is optional. It is automatically populated. The numeric value of the spread statement record total (group total) for the specified period.</description>
        <label>Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__lookupKey__c</fullName>
        <description>The field is optional. If populated the value must be unique across all the records of this type. The field typically contains an external identifier that is used to associate the record with its matching record in an external system. The field can also be used to efficiently associate related records, when importing data into nCino, without the need to know the internal ID for the record. For more information, refer to https://developer.salesforce.com/docs/atlas.en-us.apexcode.meta/apexcode/langCon_apex_dml_nested_object.htm</description>
        <externalId>true</externalId>
        <label>lookupKey</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Spread Statement Period Total</label>
    <nameField>
        <displayFormat>{000000000}</displayFormat>
        <label>Spread Statement Period Total Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Spread Statement Period Totals</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>